# v2

./: .gitignore  .npmrc  .prettierignore  .prettierrc  .vercelignore  CLAUDE.md  Dockerfile  EXECUTION_PLAN.md  README.md  SECURITY.md  docker-dev.sh  env.example  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel-build.js  vercel.json  vitest.config.ts
.cargo/: config.toml
app/: globals.css  layout.tsx  metadata.ts  page.tsx  providers.tsx
components/: borrow-loan-creation.tsx  borrow-loan-creation.tsx.backup  client-layout.tsx  constellation-bg.tsx  cta-section.tsx  devnet-faucet-button.tsx  dialect-auto-subscribe.tsx  dialect-provider.tsx  dialect-theme.css  (+38 more)
program/programs/agio/: Cargo.toml
program/programs/agio/src/: errors.rs  lib.rs
program/programs/agio/src/constants/: mod.rs
program/programs/agio/src/instructions/: accept_borrow_offer.rs  accept_lend_offer.rs  add_collateral.rs  create_borrow_offer.rs  create_lend_offer.rs  foreclose_loan.rs  foreclose_loan_v2.rs  init_price_feed_config.rs  init_vault_authority.rs  init_vault_token_account.rs  liquidate_loan.rs  migrate_vault_authority.rs  mod.rs  repay_loan.rs  rescind_borrow_offer.rs  rescind_lend_offer.rs  rescind_undercollateralized_offer.rs  update_protocol_config.rs  update_protocol_fees.rs  update_vault_disabled_mints.rs
program/programs/agio/src/state/: loan.rs  mod.rs  price_feed_config.rs  vault_authority.rs
program/programs/agio/src/utils/: fees.rs  liquidation.rs  mod.rs  nft_verification.rs  validation.rs
(+268 files in other folders)
